added quitting, wwwork, updated news

--- a/commissions.html
+++ b/commissions.html
@@ -118,6 +118,18 @@
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
+          <a href="wwwork.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">WWWORK</span>
+          </a>
+        </li>
+        <li>
+          <a href="quitting.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Quitting</span>
+          </a>
+        </li>
+        <li>
           <a href="malaonda.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Mala Onda</span>
@@ -555,7 +567,7 @@
           </div>
           <div class="col-xs-6 col-sm-4 col-md-3 document">
             <a href="twins.html">
-            <img src="img/document.jpg" class="img-responsive" alt="Performance of Roles or Personas Outside of Comfort Zone"><span>Performance of Roles or Personas Outside of Comfort Zone</span></a>
+            <img src="img/document.jpg" class="img-responsive" alt="Performance of Roles or Personas Outside of Comfort Zone"><span>Liat Berdugo &amp; Emily Martinez as Five Twins</span></a>
           </div> 
           <div class="col-xs-6 col-sm-4 col-md-3 document">
             <a href="performativeremoval.html">
