--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
+          <a href="wwwork.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">WWWORK</span>
+          </a>
+        </li>
+        <li>
+          <a href="quitting.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Quitting</span>
+          </a>
+        </li>
+        <li>
           <a href="malaonda.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Mala Onda</span>
@@ -548,27 +560,29 @@
   </div>
 
   <div id="card10" class="card draggable center">
-    <em>Open Ambiguity<br/>Keynote, OSF 2016</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/177629356?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Lecture</small>
-  </div>
-
-  <div id="card11" class="card draggable center">
-    <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/>download the <a href="http://anxioustomake.ga/media/HowToMakeYourselfIntoACommissioningBodyWorkbook.pdf" target="_blank">workbook</a> + <a href="http://anxioustomake.ga/media/scantron.pdf" target="_blank">scantron</a> </small>
-  </div>
-
-  <div id="card12" class="card draggable center">
-   <img class="new" src="img/new.gif"/>
     <em>Dolphin Accelerator</em><br/><br/>
     <iframe src="https://player.vimeo.com/video/186337332?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video</small>
   </div>
 
-  <div id="card13" class="card draggable center">
-    <img class="new" src="img/new.gif"/>
+  <div id="card11" class="card draggable center">
     <em>Mala Onda</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/186196449?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Survey</small>
+  </div>
+
+  <div id="card12" class="card draggable center">
+    <img class="new" src="img/new.gif"/>
+    <em>Quitting</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/200595854?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Commissioned Performance</small>
+  </div>
+
+  <div id="card13" class="card draggable center">
+    <img class="new" src="img/new.gif"/>
+    <em>WWWORK</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/191615585?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video Essay</small>
   </div>
 
   <div id="card14" class="card draggable center">
@@ -587,18 +601,43 @@
     <small></small>
   </div>
 
-  <div id="card2" class="card draggable news">
+  <div id="card2" class="card draggable center">
+    Surveys<br/><br/>
+    <a href="quizzes.html"><img class="img-responsive" src="img/quiz.jpg"></a>
+  </div>
+
+  <div id="card3" class="card draggable center downloads">
+    Downloads<br/><br/><br/><br/>
+    <a href="downloads.html"><img class="img-responsive" src="img/cloud2.png"></a>
+  </div>
+  
+  <div id="card4" class="card draggable center generators">
+    Generators<br/><br/><br/><br/>
+    <a href="generators.html"><img class="img-responsive" src="img/database.jpg"></a>
+  </div>
+  <div id="card5" class="card draggable center commissions">
+    Commissions<br/><br/><br/><br/>
+    <a href="commissions.html"><img class="img-responsive" src="img/document.jpg"></a>
+  </div>
+
+  <div id="card6" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
-      <strong>11.2016</strong> <a href="http://v2.nl/the-gig-is-up/" target="_blank">The Gig is Up</a>, V2_ Institute for the Unstable Media, Rotterdam
+      <strong>1.2017</strong> <em>Dolphin Accelerator</em>, <a href="http://www.petzel.com/exhibitions/2017-01-07_we-need-to-talk/" target="_blank">We Need To Talk</a>, Petzel Gallery, New York, NY
       <br/><br/>
-      <strong>11.2016</strong> <em>Side Gig</em>, <a href="http://www.b4bel4b.com/upcoming" target="_blank">B4BEL4B</a>, Oakland, CA
+      <strong>12.2016</strong> <em>The Future of Work (book)</em>. Now available as <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank">PDF or ePub</a> from V2_ Institute for the Unstable Media, or as <a href="http://www.blurb.com/bookstore/invited/6774808/e6f9300afb806ab7d840c03454e3182d2cc6c658" target="_blank">print-on-demand hardcopy</a> from Blurb.
+      <br/><br/>
+      <strong>11.2016</strong> We have work here: <a href="http://temporaryartreview.com/announcing-to-make-a-public-book-launch-events/" target="_blank">To Make a Public: Temporary Art Review 2011-2016</a>. Buy a copy and support Temporary Art Review.
+      <br/><br/>
+      <strong>11.2016</strong> <a href="http://v2.nl/the-gig-is-up/" target="_blank">The Gig is Up</a>, V2_ Institute for the Unstable Media, Rotterdam, NL
+      <br/><br/>
+      <strong>11.2016</strong> <em>Side Gig</em> (solo exhibition), <a href="http://www.b4bel4b.com/upcoming" target="_blank">B4BEL4B</a>, Oakland, CA
       <br/><br/>
       <strong>11.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="http://realfuturefair.com/" target="_blank">Real Future Fair</a>, Oakland, CA
       <br/><br/>
       <strong>11.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="https://www.soex.org/projects-exhibitions/me-and-you-and-other-thing" target="_blank">Me and You and This Other Thing</a>, Southern Exposure, San Francisco, CA
       <br/><br/>
-      <strong>10.2016</strong> <em>Making You</em>, <a href="http://v2.nl/the-gig-is-up-cloud-labour-night/view" target="_blank">Cloud Labour Night</a>, V2_ Institute for the Unstable Media, Rotterdam
+      <strong>10.2016</strong> <em>Making You</em>, <a href="http://v2.nl/the-gig-is-up-cloud-labour-night/view" target="_blank">Cloud Labour Night</a>, V2_ Institute for the Unstable Media, Rotterdam, NL
       <br/><br/>
       <strong>10.2016</strong> <a href="malaonda.html"><em>Mala Onda</em></a> and <a href="dolphinaccelerator.html"><em>Dolphin Accelerator</em></a>, commissioned by Temporary Art Review, <a href="http://commonfield.org/convenings/2016" target="_blank">Common Field</a>, Miami, FL
       <br/><br/>
@@ -626,30 +665,25 @@
     </small>    
   </div>
 
-  <div id="card3" class="card draggable center">
-    Surveys<br/><br/>
-    <a href="quizzes.html"><img class="img-responsive" src="img/quiz.jpg"></a>
-  </div>
 
-  <div id="card4" class="card draggable center downloads">
-    Downloads<br/><br/><br/><br/>
-    <a href="downloads.html"><img class="img-responsive" src="img/cloud2.png"></a>
-  </div>
-  
-  <div id="card5" class="card draggable center generators">
-    Generators<br/><br/><br/><br/>
-    <a href="generators.html"><img class="img-responsive" src="img/database.jpg"></a>
-  </div>
-  <div id="card6" class="card draggable center commissions">
-    Commissions<br/><br/><br/><br/>
-    <a href="commissions.html"><img class="img-responsive" src="img/document.jpg"></a>
-  </div>
 
 
 
   <!-- END: CARDS ROW 2 -->
 
-<!--   <div id="card11" class="card draggable center">
+<!-- retired cards  
+
+  <div id="card10" class="card draggable center">
+    <em>Open Ambiguity<br/>Keynote, OSF 2016</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/177629356?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Commissioned Lecture</small>
+  </div>
+
+  <div id="card11" class="card draggable center">
+    <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/>download the <a href="http://anxioustomake.ga/media/HowToMakeYourselfIntoACommissioningBodyWorkbook.pdf" target="_blank">workbook</a> + <a href="http://anxioustomake.ga/media/scantron.pdf" target="_blank">scantron</a> </small>
+  </div>
+
+  <div id="card11" class="card draggable center">
     <em>The Future of Work<br/>Testimonials</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/163223022?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, testimonials</small>
