--- a/malaonda.html
+++ b/malaonda.html
@@ -124,6 +124,18 @@
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
+          <a href="wwwork.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">WWWORK</span>
+          </a>
+        </li>
+        <li>
+          <a href="quitting.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Quitting</span>
+          </a>
+        </li>
+        <li>
           <a href="malaonda.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Mala Onda</span>
