--- a/index.html
+++ b/index.html
@@ -585,10 +585,11 @@
     <small>Video Essay</small>
   </div>
 
-  <div id="card14" class="card draggable center">
-    <em>Liat Berdugo + Emily Martinez<br/>as Five Twins</em><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Performance</small>
+  <div id="card14" class="card draggable center futureofworkbook">
+    <img class="new" src="img/new.gif"/>
+    <em>The Future of Work</em><br/><br/>
+    <a href="futureofworkbook.html"><img src="img/futureofworkbook.jpg" class="img-responsive" alt="The Future of Work book cover"></a><br/>
+    <small>Available as <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank">PDF, ePub</a> or in <a href="http://www.blurb.com/bookstore/invited/6774808/e6f9300afb806ab7d840c03454e3182d2cc6c658" target="_blank">print</a></small>
   </div>
 
   <!-- END: CARDS ROW 1 -->
@@ -677,6 +678,12 @@
     <em>Open Ambiguity<br/>Keynote, OSF 2016</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/177629356?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Lecture</small>
+  </div>
+
+  <div id="card14" class="card draggable center">
+    <em>Liat Berdugo + Emily Martinez<br/>as Five Twins</em><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Commissioned Performance</small>
   </div>
 
   <div id="card11" class="card draggable center">
