added social share buttons and perfect-scrollbars

--- a/store.html
+++ b/store.html
@@ -31,6 +31,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/perfect-scrollbar.min.css">
     <link rel="stylesheet" href="css/dash.css">
     <link rel="stylesheet" href="css/csshake.min.css">
     <link rel="stylesheet" href="css/app.css">
@@ -542,6 +543,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
 <script src="js/dash.js"></script>
+<script src="js/perfect-scrollbar.js"></script>
 
 </body>
 </html>
