--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -32,6 +32,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/perfect-scrollbar.min.css">
     <link rel="stylesheet" href="css/dash.css">
     <link rel="stylesheet" href="css/csshake.min.css">
     <link rel="stylesheet" href="css/app.css">
@@ -664,6 +665,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
 <script src="js/dash.js"></script>
+<script src="js/perfect-scrollbar.js"></script>
     <script type="text/javascript" src="js/seeThru.min.js"></script>
     <script type="text/javascript" src="js/sweepstakes.js"></script>
     <script data-cfasync="false" type="text/javascript" src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
