--- a/importantthings.html
+++ b/importantthings.html
@@ -32,6 +32,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/perfect-scrollbar.min.css">
     <link rel="stylesheet" href="css/dash.css">
     <link rel="stylesheet" href="css/csshake.min.css">
     <link rel="stylesheet" href="css/app.css">
@@ -570,6 +571,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
 <script src="js/dash.js"></script>
+<script src="js/perfect-scrollbar.js"></script>
 <script type="text/javascript" src="js/mediums.json"></script>
 <script type="text/javascript" src="js/topics.json"></script>
 <script type="text/javascript" src="js/topics2.json"></script>
