--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/perfect-scrollbar.min.css">
     <link rel="stylesheet" href="css/dash.css">
     <link rel="stylesheet" href="css/csshake.min.css">
     <link rel="stylesheet" href="css/app.css">
@@ -588,8 +589,10 @@
   <div id="card14" class="card draggable center futureofworkbook">
     <img class="new" src="img/new.gif"/>
     <em>The Future of Work</em><br/><br/>
-    <a href="futureofworkbook.html"><img src="img/futureofworkbook.jpg" class="img-responsive" alt="The Future of Work book cover"></a><br/>
-    <small>Available as <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank">PDF, ePub</a> or in <a href="http://www.blurb.com/bookstore/invited/6774808/e6f9300afb806ab7d840c03454e3182d2cc6c658" target="_blank">print</a></small>
+    <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank"><img src="img/futureofworkbook.jpg" class="img-responsive" alt="The Future of Work book cover"></a><br/>
+    <small>Available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a>, <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a>, or in <a href="http://bit.ly/futureofwork-print" target="_blank">print</a>.
+
+    <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank">PDF, ePub</a> or in <a href="http://www.blurb.com/bookstore/invited/6774808/e6f9300afb806ab7d840c03454e3182d2cc6c658" target="_blank">print</a></small>
   </div>
 
   <!-- END: CARDS ROW 1 -->
@@ -624,11 +627,11 @@
   <div id="card6" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
-      <strong>2.2017</strong> <em>WWWWORK</em>, <a href="http://wrocenter.pl/en/wro2017/" target="_blank">“DRAFT SYSTEMS”, 17<sup>th</sup> Media Art Biennale WRO 2017</a>, WRO Art Center, Wroclaw, Poland (forthcoming)
+      <strong>2.2017</strong> <em>WWWWORK</em>, <a href="http://wro2017.wrocenter.pl/en/contract-wideo/" target="_blank">“DRAFT SYSTEMS”, 17<sup>th</sup> Media Art Biennale WRO 2017</a>, WRO Art Center, Wroclaw, Poland
       <br/><br/>
       <strong>1.2017</strong> <em>Dolphin Accelerator</em>, <a href="http://www.petzel.com/exhibitions/2017-01-07_we-need-to-talk/" target="_blank">We Need To Talk</a>, Petzel Gallery, New York, NY
       <br/><br/>
-      <strong>12.2016</strong> <em>The Future of Work (book)</em>. Now available as <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank">PDF or ePub</a> from V2_ Institute for the Unstable Media, or as <a href="http://www.blurb.com/bookstore/invited/6774808/e6f9300afb806ab7d840c03454e3182d2cc6c658" target="_blank">print-on-demand hardcopy</a> from Blurb.
+      <strong>12.2016</strong> <em>The Future of Work (book)</em>. Now available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a> or <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a> from V2_ Institute for the Unstable Media, or as print-on-demand <a href="http://bit.ly/futureofwork-print" target="_blank">hardcopy</a> from Blurb
       <br/><br/>
       <strong>11.2016</strong> We have work here: <a href="http://temporaryartreview.com/announcing-to-make-a-public-book-launch-events/" target="_blank">To Make a Public: Temporary Art Review 2011-2016</a>. Buy a copy and support Temporary Art Review.
       <br/><br/>
@@ -740,7 +743,14 @@
   </div> -->
 
 </div><!-- end container-->
+<div class="sharing-container">
+    <ul>
+      <li><a href="https://www.facebook.com/sharer/sharer.php?u=http://anxioustomake.ga/" class="icon-10 facebook" title="Facebook"><svg viewBox="0 0 512 512"><path d="M211.9 197.4h-36.7v59.9h36.7V433.1h70.5V256.5h49.2l5.2-59.1h-54.4c0 0 0-22.1 0-33.7 0-13.9 2.8-19.5 16.3-19.5 10.9 0 38.2 0 38.2 0V82.9c0 0-40.2 0-48.8 0 -52.5 0-76.1 23.1-76.1 67.3C211.9 188.8 211.9 197.4 211.9 197.4z"></path></svg><!--[if lt IE 9]><em>Facebook</em><![endif]--></a></li>
 
+      <li><a href="https://twitter.com/share" class="icon-26 twitter" title="Twitter"><svg viewBox="0 0 512 512"><path d="M419.6 168.6c-11.7 5.2-24.2 8.7-37.4 10.2 13.4-8.1 23.8-20.8 28.6-36 -12.6 7.5-26.5 12.9-41.3 15.8 -11.9-12.6-28.8-20.6-47.5-20.6 -42 0-72.9 39.2-63.4 79.9 -54.1-2.7-102.1-28.6-134.2-68 -17 29.2-8.8 67.5 20.1 86.9 -10.7-0.3-20.7-3.3-29.5-8.1 -0.7 30.2 20.9 58.4 52.2 64.6 -9.2 2.5-19.2 3.1-29.4 1.1 8.3 25.9 32.3 44.7 60.8 45.2 -27.4 21.4-61.8 31-96.4 27 28.8 18.5 63 29.2 99.8 29.2 120.8 0 189.1-102.1 185-193.6C399.9 193.1 410.9 181.7 419.6 168.6z"></path></svg><!--[if lt IE 9]><em>Twitter</em><![endif]--></a></li>
+
+  </ul>
+</div>
 <!-- Javascript -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -749,6 +759,7 @@
 <script src="js/droppables.js" type="text/javascript"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
 <script src="js/dash.js"></script>
+<script src="js/perfect-scrollbar.js"></script>
 
 </body>
 </html>
