--- a/mugruggenerator.html
+++ b/mugruggenerator.html
@@ -30,6 +30,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/perfect-scrollbar.min.css">
     <link rel="stylesheet" href="css/dash.css">
     <link rel="stylesheet" href="css/csshake.min.css">
     <link rel="stylesheet" href="css/app.css">
@@ -1013,6 +1014,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
 <script src="js/dash.js"></script>
+<script src="js/perfect-scrollbar.js"></script>
 <script src="js/mugs.js" type="text/javascript"></script>
 
 </body>
