added mqs for future generator on mobile

--- a/generators.html
+++ b/generators.html
@@ -280,6 +280,12 @@
             <span class="dnl-link-text">More Important Art Generator</span>
           </a>
         </li>
+        <li>
+          <a href="futuregenerator.html">
+            <span class="fa fa-database dnl-link-icon"></span>
+            <span class="dnl-link-text">Future Generator</span>
+          </a>
+        </li>
       </ul>
     </li>
     <li>
@@ -577,6 +583,10 @@
           <div class="col-xs-6 col-sm-4 col-md-3 database">
             <a href="importantthings.html">
             <img src="img/database.jpg" class="img-responsive" alt="Value Generator"><span>More Important Art<br/>Generator</span></a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3 database">
+            <a href="futuregenerator.html">
+            <img src="img/database.jpg" class="img-responsive" alt="Future Generator"><span>Future<br/>Generator</span></a>
           </div> 
           <!-- <div class="col-xs-6 col-sm-4 col-md-3 database">
             <a href="moneymakinggenerator.html">
