--- a/index.html
+++ b/index.html
@@ -297,6 +297,12 @@
             <span class="dnl-link-text">More Important Art Generator</span>
           </a>
         </li>
+        <li>
+          <a href="futuregenerator.html">
+            <span class="fa fa-database dnl-link-icon"></span>
+            <span class="dnl-link-text">Future Generator</span>
+          </a>
+        </li>
       </ul>
     </li>
     <li>
