added afterwork.html, updated future generator modal, updated index page

--- a/commissions.html
+++ b/commissions.html
@@ -119,6 +119,12 @@
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
+          <a href="afterwork.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">After Work | Four Futures</span>
+          </a>
+        </li>
+        <li>
           <a href="wwwork.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">WWWORK</span>
@@ -550,6 +556,10 @@
     <div class="container">
         <div class="row">
           <h1 class="title">Our Commissions</h1>
+          <div class="col-xs-6 col-sm-4 col-md-3 document">
+            <a href="afterwork.html">
+            <img src="img/document.jpg" class="img-responsive" alt="WWWORK"><span>After Work | Four Futures</span></a>
+          </div>
           <div class="col-xs-6 col-sm-4 col-md-3 document">
             <a href="wwwork.html">
             <img src="img/document.jpg" class="img-responsive" alt="WWWORK"><span>WWWORK</span></a>
