--- a/futuregenerator.html
+++ b/futuregenerator.html
@@ -98,6 +98,21 @@
 </aside>
 <!--END: ABOUT MODAL-->
 
+<!--START: AFTERWORK MODAL-->
+<aside id="afterwork-modal" class="popup">
+  <div class="popUpContainer">
+    <header>
+      <a href="#!" class="closePopUp">X</a>
+      <h2><small>After Work | Four Futures</small></h2>
+    </header>
+    <article class="modal-text">
+      <p>Beofre you design the future, please watch:</p>
+      <iframe src="https://player.vimeo.com/video/222723623?title=0&byline=0&portrait=0" width="320" height="180" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </article>
+  </div>        
+  <a href="#!" class="closePopUpOutSide"></a>    
+</aside>
+<!--END: AFTERWORK MODAL-->
 <!-- START: NAVIGATION -->
 
 <!-- Dash Navbar Button -->
@@ -119,6 +134,12 @@
       </a>
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
+        <li>
+          <a href="afterwork.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">After Work | Four Futures</span>
+          </a>
+        </li>
         <li>
           <a href="wwwork.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
@@ -551,6 +572,14 @@
 <div class="generator-container">
 <div class="future"></div>
 <button class="makefuture">GENERATE A FUTURE</button>   
+</div>
+<div class="more-info-bottom-left"><a href="#afterwork-modal"><img src="img/info.gif"></a></div>
+<div id="love-me">
+  <marquee direction="down" width="100%" height="100%" behavior="alternate">
+    <marquee behavior="alternate">
+      <div><img src="img/dollar140px.gif" alt=""></div>
+    </marquee>
+  </marquee>
 </div>
 <!--END: MAIN CONTENT-->
 
