--- a/temporaryartreview.html
+++ b/temporaryartreview.html
@@ -135,6 +135,12 @@
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
+          <a href="afterwork.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">After Work | Four Futures</span>
+          </a>
+        </li>
+        <li>
           <a href="wwwork.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">WWWORK</span>
@@ -563,7 +569,7 @@
 
 
 <!--START: MAIN CONTENT-->
-<div class="about-tar"><a href="#tar-modal"><img src="img/info.gif"></a></div>
+<div class="more-info-bottom-left"><a href="#tar-modal"><img src="img/info.gif"></a></div>
 <div class="main-content">
   <iframe src="https://s3.amazonaws.com/tarwalkon/index.html" style="border: 0; position:absolute; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
 </div>
