--- a/afterwork.html
+++ b/afterwork.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
-  <meta charset="UTF-8">
-  <title>Anxious to Externalize Distrust</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="Cache-control" content="public">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>After Work | Four Futures</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="author" content="Liat Berdugo and Emily Martinez">
-  <meta name='description' content='Externalize Distrust'>
-  <meta name='keywords' content='distrust, mistrust, trust, faith, intuition, systemic collapse'>
-  
+    <meta name="author" content="Liat Berdugo and Emily Martinez">
+    <meta name='description' content="After Work | Four Futures">
+    <meta name='keywords' content='capitalism, neoliberalism, accelerationism, work, labor, digital labor, immaterial labor, post-work'>
+    
     <!-- Open Graph data -->
-    <meta property="og:title" content="Anxious to Make" />
+    <meta property="og:title" content="WWWORK" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://www.anxioustomake.ga/" />
-    <meta property="og:image" content="http://anxioustomake.ga/img/meta-humanbillboard.jpg" />
-    <meta property="og:description" content='Anxious to Make is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape.' /> 
+    <meta property="og:url" content="http://www.anxioustomake.ga/wwwork.html" />
+    <meta property="og:image" content="http://anxioustomake.ga/img/meta-wwwork.jpg" />
+    <meta property="og:description" content="After Work | Four Futures" /> 
     <meta property="og:site_name" content="Anxious to Make" />
     <meta property="fb:admins" content="753667636" />
 
     <!--Twitter Meta-->
     <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
     <meta name="twitter:site" content="@anxioustomake" />
-    <meta name="twitter:title" content="Anxious to Make">
-    <meta name="twitter:description" content='Anxious to Make is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape.'>
-    <meta name="twitter:creator" content="@anxioustomake ">
-    <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-humanbillboard.jpg">
+    <meta name="twitter:title" content="WWWORK">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-wwwork.jpg">
 
+  
     <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -60,11 +61,12 @@
 
     <script type="text/javascript" src="js/analytics.js"></script>
     
-</head>
+    <link rel="stylesheet" type="text/css" href="css/sweepstakes.css">
 
-<body class="commission">
+ </head>
 
-<!--START: CONTACT MODAL-->
+<body>
+  <!--START: CONTACT MODAL-->
 <aside id="contact-modal" class="popup">
   <div class="popUpContainer">
     <header>
@@ -80,7 +82,7 @@
 </aside>
 <!--END: CONTACT MODAL-->
 
-<!--START: ABOUT MODAL-->
+  <!--START: ABOUT MODAL-->
 <aside id="hello" class="popup">
   <div class="popUpContainer">
     <header>
@@ -99,7 +101,7 @@
 </aside>
 <!--END: ABOUT MODAL-->
 
-<!-- START: NAVIGATION -->
+  <!-- START: NAVIGATION -->
 
 <!-- Dash Navbar Button -->
 <button class="dnl-btn-toggle">
@@ -395,7 +397,7 @@
   </ul>      
 </div><!-- /.dash-navbar-left -->
 <!--END: NAVIGATION-->
-<!--START: HELLO -->
+  <!--START: HELLO -->
 <a href="/"><div id="info"><img src="img/anxious-icon.gif"/></div></a>
 <!--END: HELLO -->
 
@@ -553,83 +555,22 @@
 </div>
 <!-- END: SOCIAL SHARE -->
 
-
-<!--START: MAIN CONTENT-->
-<div class="container main-content">
-  <div class="row">
-    <!--main content header-->
-    <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
-      <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
-    </div>
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-      <h1 class="pageheading">Commission a Performance to Externalize Distrust</h1>
-    </div>
-  </div>
-
-  <div class="row">  
-    <!--script or text goes here-->
-    <div class="col-xs-12 col-sm-4 col-md-4">
-        <p class="title">Script</p>
-        <div class="clipvertical-wrapper">
-        <div class="clipvertical">    
-            <p class="script">Varun: Hello. I am your distrust in capitalism!
-                <br/><br/>
-                Khalun: And hello, I am your distrust in your own intuition. 
-                <br/><br/>
-                SAY TOGETHER: We live here, in this living room, together. We live outside of you.
-                <br/><br/>
-                Varun: We live in India. We cannot hug or get close to each other, don’t ask why!!!
-                <br/><br/>
-                Khalun: Yeah. We cannot hug or get close to each other, don’t ask why.
-                <br/><br/>
-                Varun: But the point is, we are externalized now.
-                <br/><br/>
-                Khalun: We are outside of you. 
-                <br/><br/>
-                SAY TOGETHER: Bye!
-                <br/><br/>
-                [Both wave goodbye to the camera]
-            </p>
-        </div>   
-        </div>
-        <p class="credit">Commissioned from: <a href="https://www.fiverr.com/varun_karkhanis/make-varun-and-khalun-say-whatever-you-want" target="_blank">I will make twins say whatever you want</a></p>
-    </div>
-    <!--sample goes here-->
-    <div class="col-xs-12 col-sm-8 col-md-8">
-        <h1 class="title">Watch ours!</h1>
-        <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153587609?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>       
-    </div>
-    <!--three additional examples go here-->
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-        <h1 class="title">Make Your Own</h1>
-        <div class="row">  
-            <div class="col-xs-4">
-                <span class="recommendation">We recommend:<br/></span> 
-                <a href="https://www.fiverr.com/varun_karkhanis/do-a-eye-brow-equalizer-holding-custom-sign" target="_blank">I will create an eyebrow equalizer holding custom sign</a>
-            </div>   
-            <div class="col-xs-4">
-                <span class="recommendation">We recommend:<br/></span> 
-                <a href="https://www.fiverr.com/varun_karkhanis/say-whatever-you-want-with-my-fancy-man-costume" target="_blank">I will say whatever you want with my fancy man costume</a>
-            </div>
-            <div class="col-xs-4">
-                <span class="recommendation">We recommend:<br/></span> 
-                <a href="https://www.fiverr.com/varun_karkhanis/say-whatever-you-want-like-a-ghost-rider" target="_blank">I will say whatever you want like a Ghost Rider</a>
-            </div>
-        </div>
-    </div>  
   
-  </div><!--end row-->
-</div><!--end container-->
+<!--START: MAIN CONTENT-->
+<div class="container dolphin-container">    
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/222723623?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
+  <p>After watching, design <a href="futuregenerator.html">the future</a>.</p>
+</div>
 <!--END: MAIN CONTENT-->
 
-<!-- Javascript -->
+    <!-- Javascript -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
 <script src="js/dash.js"></script>
 <script src="js/perfect-scrollbar.js"></script>
+   
 </body>
-
 </html>
