--- a/makingyou.html
+++ b/makingyou.html
@@ -122,6 +122,12 @@
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
+          <a href="afterwork.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">After Work | Four Futures</span>
+          </a>
+        </li>
+        <li>
           <a href="wwwork.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">WWWORK</span>
