updated index page

--- a/futuregenerator.html
+++ b/futuregenerator.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Liat Berdugo and Emily Martinez">
-    <meta name='description' content='404 error: You are lost.'>
+    <meta name='description' content='Design thinking ideation exercise for generating future worlds.'>
     <meta name='keywords' content=''>
     
     <!-- Open Graph data -->
@@ -106,7 +106,7 @@
       <h2><small>After Work | Four Futures</small></h2>
     </header>
     <article class="modal-text">
-      <p>Beofre you design the future, please watch:</p>
+      <p>Before you design the future, please watch:</p>
       <iframe src="https://player.vimeo.com/video/222723623?title=0&byline=0&portrait=0" width="320" height="180" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </article>
   </div>        
