--- a/index.html
+++ b/index.html
@@ -601,18 +601,21 @@
     <small>Video Essay</small>
   </div>
 
-  <div id="card13" class="card draggable center">
-    <em>After Work | Four Futures</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/222723623?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>After watching, design <a href="futuregenerator.html"> the future</a>.</small>
-  </div>
-
-  <div id="card14" class="card draggable center futureofworkbook">
+  <div id="card13" class="card draggable center futureofworkbook">
     <img class="new" src="img/new.gif"/>
     <em>The Future of Work</em><br/><br/>
     <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank"><img src="img/futureofworkbook.jpg" class="img-responsive" alt="The Future of Work book cover"></a><br/>
     <small>Available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a>, <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a>, or in <a href="http://bit.ly/futureofwork-print" target="_blank">print</a>.</small>
   </div>
+
+  <div id="card14" class="card draggable center">
+    <img class="new" src="img/new.gif"/>
+    <em>After Work | Four Futures</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/222723623?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Design <a href="futuregenerator.html"> the future</a>.</small>
+  </div>
+
+
 
   <!-- END: CARDS ROW 1 -->
 
