updated news, barely

--- a/index.html
+++ b/index.html
@@ -649,6 +649,12 @@
   <div id="card6" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
+    <strong>12.2017</strong> <em>Flat Rate Box</em>, modified/arts, Phoenix, AZ 
+     <br/><br/>
+    <strong>12.2017</strong> <em>What I Like About You</em>, Southern Exposure Gallery, San Francisco, CA 
+     <br/><br/>
+     <strong>12.2017</strong> <em>nervous.online</em>, Wrong Biennale 
+     <br/><br/>
       <strong>6.2017</strong> <em>Precarious Life 2.0</em>, <a href="http://theluminaryarts.com/exhibitions/anxious-to-make" target="_blank">The Luminary</a>, St. Louis, MO<br/>Solo Exhibition, June 24 - July 15th, 2017
       <br/><br/>
       <strong>6.2017</strong> <em>Unthinking the Sharing Economy</em>, <a href="http://www.vencafstl.org/" target="_blank">Venture Cafe STL</a><br/>Designing thinking workshop: Thursday, June 22, 4-5pm
