--- a/index.html
+++ b/index.html
@@ -616,9 +616,9 @@
 
     <div id="card14" class="card draggable center">
     <img class="new" src="img/new.gif"/>
-    <em>Eternal Boy Playground</em><br/><br/><br/><br/>
+    <em>Eternal Boy Playground</em><br/><br/><br/>
     <a href="https://tttelematiccc.com/" target="_blank"><img class="img-responsive" src="img/eternal.jpg"></a><br/>
-    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/>San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019</small>
+    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/>San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/><a href="https://www.kqed.org/arts/13849586/crypto-bros-eternal-boy-playground-anxious-to-make" target="_blank">review</a></small>
 
   </div>
 
@@ -656,18 +656,24 @@
   <div id="card6" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
-    <strong>2.2019</strong> <em>Making You</em>, Entanglements, <a href="http://herenvironment.com/" target="_blank">Her Environment</a>, <a href="http://theyardsgallery.com" target="_blank">Yards Gallery</a>, Chicago, IL
-     <br/><br/>
+    <strong>2.2019</strong> <em><a href="https://www.kqed.org/arts/13849586/crypto-bros-eternal-boy-playground-anxious-to-make" target="_blank">Crypto-Bros Beware: These Artists Aren’t Buying Your Version of Utopia</a></em> review of <em>Eternal Boy Playground</em> by Blythe Sheldon, KQED Arts
+    <br/><br/>
+    <strong>2.2019</strong> <em>This Artwork is About the Sharing Economy</em>,  Who Does What?, <a href="http://drugo-more.hr/" target="_blank">Drugo More</a>, Rijeka, Croatia, Feb 14 - March 7 2019
+    <br/><br/>
+    <strong>2.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, Self as Actor: Colonising Identity, <a href="http://www.neme.org/nac/" target="_blank">NeMe Arts Centre</a>, Limassol, Cyprus, Feb 15 - March 25 2019
+    <br/><br/>
     <strong>2.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://awmat2019.wordpress.com/" target="_blank">Alliance of Women in Media Arts and Technology</a>, University of California Santa Barbara
-     <br/><br/>
+    <br/><br/>
+    <strong>1.2019</strong> <em>Making You</em>, Entanglements, <a href="http://herenvironment.com/" target="_blank">Her Environment</a>, <a href="http://theyardsgallery.com" target="_blank">Yards Gallery</a>, Chicago, IL, Jan 26 - Feb 15 2019
+    <br/><br/>
     <strong>12.2018</strong> <em>Eternal Boy Playground</em>, <a href="https://tttelematiccc.com/" target="_blank">Telematic</a>, San Francisco, CA<br/>Solo Exhibition, Dec 15 2018 - Feb 2 2019
-      <br/><br/>
+    <br/><br/>
     <strong>11.2018</strong> <em>Making You</em>, <a href="https://northeastofnorth.com/event/artists-shorts-screening-programme/" target="_blank">Artists’ Shorts Screening Programme</a>, NEoN Digital Arts Festival, Dundee, Scotland
-     <br/><br/>
+    <br/><br/>
     <strong>8.2018</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="http://artlitlab.org/events/off-the-wall-2018" target="_blank">Off the Wall</a>, Arts + Literature Laboratory, Madison, WI
-     <br/><br/>
+    <br/><br/>
     <strong>12.2017</strong> <em>This Artwork is about the Sharing Economy</em>, <a href="http://modifiedarts.org/events-and-exhibitions/flat-rate-box/" target="_blank">Flat Rate Box</a>, modified/arts, Phoenix, AZ 
-     <br/><br/>
+    <br/><br/>
     <strong>12.2017</strong> <em>Quitting</em>, <a href="https://www.soex.org/events/what-i-about-you" target="_blank">What I Like About You</a>, Southern Exposure Gallery, San Francisco, CA 
      <br/><br/>
      <strong>11.2017</strong> <em>How to Make Yourself into a Commissioning Body in Five Easy Steps</em>, <a href="http://nervous.online/" target="_blank">nervous.online</a>, Wrong Biennale 
