added mobile homepage finally, updated news

--- a/makingyou.html
+++ b/makingyou.html
@@ -73,8 +73,14 @@
       <h2>Contact Us</h2>
     </header>
     <article class="modal-text">
-      <p class="email"><img src="img/mail.gif"><span><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> | <i class="fa fa-vimeo"></i><a href="https://vimeo.com/anxioustomake" target="_blank"> Vimeo</a></span></p>
+      <p class="email"><img src="img/mail.gif"><span>
+      <a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> <br/> 
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/Resonator11" target="_blank"> Emily</a> | 
+      <i class="fa fa-instagram"></i><a href="https://instagram.com/queerai" target="_blank"> Emily</a> |
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/whatliat" target="_blank"> Liat</a> |
+      <i class="fa fa-instagram"></i><a href="https://instagram.com/whatliat" target="_blank"> Liat</a>
+      </span> </p>
     </article>
   </div>        
   <a href="#!" class="closePopUpOutSide"></a>    
@@ -100,7 +106,7 @@
 </aside>
 <!--END: ABOUT MODAL-->
 
-  <!-- START: NAVIGATION -->
+   START: NAVIGATION -->
 
 <!-- Dash Navbar Button -->
 <button class="dnl-btn-toggle">
@@ -325,29 +331,18 @@
     </li>
     <li>
     <a class="collapsed" data-toggle="collapse" href="#collapseQuizzes" aria-expanded="false" aria-controls="collapseQuizzes">
-        <span class="fa fa-question dnl-link-icon"></span>
-        <span class="dnl-link-text">Quizzes</span>
+        <span class="fa fa-comment-o dnl-link-icon"></span>
+        <span class="dnl-link-text">Quizzes + Surveys</span>
         <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
       </a>
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseQuizzes">
         <li>
           <a href="moneyquiz.html">
-            <span class="fa fa-question dnl-link-icon"></span>
+            <span class="fa fa-comment-o dnl-link-icon"></span>
             <span class="dnl-link-text">Would Money Be All I Really Need to Succeed?</span>
           </a>
         </li>
-      </ul>
-    </li>
-    <p class="dnl-nav-title">Contribute</p>
-    <li>
-    <a class="collapsed" data-toggle="collapse" href="#collapseSurveys" aria-expanded="false" aria-controls="collapseQuizzes">
-        <span class="fa fa-comment-o dnl-link-icon"></span>
-        <span class="dnl-link-text">Surveys</span>
-        <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
-      </a>
-      <!-- Dropdown level one -->
-      <ul class="dnl-sub-one collapse" id="collapseSurveys">
         <li>
           <a href="makingyou.html">
             <span class="fa fa-comment-o dnl-link-icon"></span>
@@ -362,18 +357,6 @@
         </li>
       </ul>
     </li>
-    <li>
-      <a href="cse.html">
-        <span class="fa fa-globe dnl-link-icon"></span>
-        <span class="dnl-link-text">CSE</span>
-      </a>
-    </li>
-    <li>
-      <a href="store.html">
-        <span class="fa fa-shopping-cart dnl-link-icon"></span>
-        <span class="dnl-link-text">Store</span>
-      </a>
-    </li> 
     <p class="dnl-nav-title">Info</p>
     <li>
       <a href="#contact-modal">
@@ -387,15 +370,28 @@
         <span class="dnl-link-text">About</span>
       </a>
     </li>
-    <li>
+<!--     <li>
       <a href="index.html">
         <span class="fa fa-home dnl-link-icon"></span>
         <span class="dnl-link-text">Home</span>
       </a>
-    </li>       
+    </li> -->
+    <p class="dnl-nav-title">Contribute</p>
+<!--     <li>
+      <a href="cse.html">
+        <span class="fa fa-globe dnl-link-icon"></span>
+        <span class="dnl-link-text">Center 4 The Sharing Economy</span>
+      </a>
+    </li> -->
+    <li>
+      <a href="store.html">
+        <span class="fa fa-shopping-cart dnl-link-icon"></span>
+        <span class="dnl-link-text">Store</span>
+      </a>
+    </li>        
   </ul>      
 </div><!-- /.dash-navbar-left -->
-<!--END: NAVIGATION-->
+<!--END: NAVIGATION
   <!--START: HELLO -->
 <a href="/"><div id="info"><img src="img/anxious-icon.gif"/></div></a>
 <!--END: HELLO -->
