--- a/futureofwork.html
+++ b/futureofwork.html
@@ -129,7 +129,7 @@
         <li>
           <a href="afterwork.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">After Work | Four Futures</span>
+            <span class="dnl-link-text">After Work</span>
           </a>
         </li>
         <li>
@@ -554,15 +554,30 @@
 <div class="container main-content">
   <div class="row">
     <!--main content header-->
-    <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
-      <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
-    </div>
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-      <h1 class="pageheading">The Future of Work, Testimonials (Part I)</h1>
+      <h1 class="pageheading shake-slow shake-constant">The Future of Work, Testimonials</h1>
     </div>
+    <!-- <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
+      <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
+    </div> -->
+
   </div>
 
   <div class="row">  
+
+    <!--sample goes here-->
+    <div class="col-xs-12 col-sm-8 col-md-8">
+        <!-- <h1 class="title">Interviews with Fiverr.com Testimonial Actors</h1> -->
+        <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/163223022?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+        <p><em>The Future of Work Testimonials</em> were commissioned from "testimonial actors" on Fiverr.com. 
+        <br/></br/>
+        Testimonial actors are actors whose role it is to perform "authentic" testimonials about a product or service. In the majority of cases, these are products or services they have never used. Testimonial actors are accustomed to working with scripts. Rarely do they contribute their own thoughts or opinions about the things they are reviewing.
+        <br/></br/>
+        The actors we hired were not given a script. Instead, they were presented with a series of questions about jobs, the sharing economy, and the future of work. To our knowledge, the following responses reflect the personal views and experiences of these workers.
+        </p>       
+    </div>
     <!--script or text goes here-->
     <div class="col-xs-12 col-sm-4 col-md-4">
         <p class="title">Interview Questions</p>
@@ -583,19 +598,6 @@
         </div>
         <p class="credit">Commissioned from: <a href="https://www.fiverr.com/yourspokesguy" target="_blank">I will create a natural URBAN testimonial on webcam in 48 Hours</a>, <a href="https://www.fiverr.com/tgraham828" target="_blank">I will create a natural business review</a>, <a href="https://www.fiverr.com/ssgtstinnett">   
         I will create a testimonial video as an American Male Military War Veteran</a>, <a href="https://www.fiverr.com/mayvin" target="_blank">I will produce a high quality video with my family</a>, <a href="https://www.fiverr.com/marcossama">I will video testimonial English latin accent or spanish</a>, <a href="https://www.fiverr.com/socialimpact" target="_blank">I will be your video spokeperson for your business in my car</a>, <a href="https://www.fiverr.com/bradfordjet" target="_blank">I will professionally do a video testimonial</a>, <a href="https://www.fiverr.com/lawrenceiscool" target="_blank">I will record a sloppy and UNPROFESSIONAL Testimonial</a>, <a href="https://www.fiverr.com/ashwanithakur" target="_blank">I will do Realistic and Unprofessional Testimonial</a>, <a href="https://www.fiverr.com/jhorn1177" target="_blank">I will be a believable and trustworthy Spokesperson for your cause</a>, <a href="https://www.fiverr.com/ivanalexx" target="_blank">I will record the PERFECT Video Testimonial</a></p>
-    </div>
-    <!--sample goes here-->
-    <div class="col-xs-12 col-sm-8 col-md-8">
-        <!-- <h1 class="title">Interviews with Fiverr.com Testimonial Actors</h1> -->
-        <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/163223022?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>
-        <p><em>The Future of Work Testimonials</em> were commissioned from "testimonial actors" on Fiverr.com. 
-        <br/></br/>
-        Testimonial actors are actors whose role it is to perform "authentic" testimonials about a product or service. In the majority of cases, these are products or services they have never used. Testimonial actors are accustomed to working with scripts. Rarely do they contribute their own thoughts or opinions about the things they are reviewing.
-        <br/></br/>
-        The actors we hired were not given a script. Instead, they were presented with a series of questions about jobs, the sharing economy, and the future of work. To our knowledge, the following responses reflect the personal views and experiences of these workers.
-        </p>       
     </div>
 
   
