--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <li>
           <a href="afterwork.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">After Work | Four Futures</span>
+            <span class="dnl-link-text">After Work</span>
           </a>
         </li>
         <li>
@@ -612,9 +612,9 @@
 
   <div id="card14" class="card draggable center">
     <img class="new" src="img/new.gif"/>
-    <em>Eternal Boy Playground</em><br/><br/><br/>
+    <em>Eternal Boy Playground</em><br/><br/>
     <a href="https://tttelematiccc.com/" target="_blank"><img class="img-responsive" src="img/eternal.jpg"></a><br/>
-    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/>San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/><a href="https://www.kqed.org/arts/13849586/crypto-bros-eternal-boy-playground-anxious-to-make" target="_blank">review</a></small>
+    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/>323 10th St. (at Folsom)<br/>San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/><span class="closing shake-little shake-constant">Closing Reception: Feb 2nd, 4-6pm</span></small>
   </div>
 
 
@@ -651,25 +651,29 @@
   <div id="card6" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
-    <strong>2.2019</strong> <em><a href="https://www.kqed.org/arts/13849586/crypto-bros-eternal-boy-playground-anxious-to-make" target="_blank">Crypto-Bros Beware: These Artists Aren’t Buying Your Version of Utopia</a></em> review of <em>Eternal Boy Playground</em> by Blythe Sheldon, KQED Arts
+    <strong>1.2019</strong> <em><a href="https://www.kqed.org/arts/13849586/crypto-bros-eternal-boy-playground-anxious-to-make" target="_blank">Crypto-Bros Beware: These Artists Aren’t Buying Your Version of Utopia</a></em> review of <em>Eternal Boy Playground</em> by Blythe Sheldon, KQED Arts
     <br/><br/>
-    <strong>2.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://currentsnewmedia.org/festivals/currents-new-media-2019/" target="_blank">Currents New Media Festival</a>, Santa Fe, New Mexico, June 7-23 2019
+    <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://currentsnewmedia.org/festivals/currents-new-media-2019/" target="_blank">Currents New Media Festival</a>, Santa Fe, New Mexico, June 7-23 2019
     <br/><br/>
-    <strong>2.2019</strong> <em>This Artwork is About the Sharing Economy</em>,  Who Does What?, <a href="http://drugo-more.hr/" target="_blank">Drugo More</a>, Rijeka, Croatia, February 14 - March 7 2019
+    <strong>1.2019</strong> <em>This Artwork is About the Sharing Economy</em>,  Who Does What?, <a href="http://drugo-more.hr/" target="_blank">Drugo More</a>, Rijeka, Croatia, February 14 - March 7 2019
     <br/><br/>
-    <strong>2.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, Self as Actor: Colonising Identity, <a href="http://www.neme.org/nac/" target="_blank">NeMe Arts Centre</a>, Limassol, Cyprus, February 15 - March 25 2019
+    <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, Self as Actor: Colonising Identity, <a href="http://www.neme.org/nac/" target="_blank">NeMe Arts Centre</a>, Limassol, Cyprus, February 15 - March 25 2019
     <br/><br/>
-    <strong>2.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://awmat2019.wordpress.com/" target="_blank">Alliance of Women in Media Arts and Technology</a>, University of California Santa Barbara, February 7-9 2019
+    <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://awmat2019.wordpress.com/" target="_blank">Alliance of Women in Media Arts and Technology</a>, University of California Santa Barbara, February 7-9 2019
     <br/><br/>
     <strong>1.2019</strong> <em>Making You</em>, Entanglements, <a href="http://herenvironment.com/" target="_blank">Her Environment</a>, <a href="http://theyardsgallery.com" target="_blank">Yards Gallery</a>, Chicago, IL, Jan 26 - Feb 15 2019
     <br/><br/>
     <strong>12.2018</strong> <em>Eternal Boy Playground</em>, <a href="https://tttelematiccc.com/" target="_blank">Telematic</a>, San Francisco, CA<br/>Solo Exhibition, Dec 15 2018 - February 2 2019
     <br/><br/>
+    <strong>11.2018</strong> Emergancy Grant to help fund <em>Eternal Boy Playground</em>, <a href="https://www.foundationforcontemporaryarts.org/recipients/2018emergencygrantsvisualarts" target="_blank">Foundation for Contemporary Arts</a> New York, NY
+    <br/><br/>
     <strong>11.2018</strong> <em>Making You</em>, <a href="https://northeastofnorth.com/event/artists-shorts-screening-programme/" target="_blank">Artists’ Shorts Screening Programme</a>, NEoN Digital Arts Festival, Dundee, Scotland
     <br/><br/>
     <strong>8.2018</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="http://artlitlab.org/events/off-the-wall-2018" target="_blank">Off the Wall</a>, Arts + Literature Laboratory, Madison, WI
     <br/><br/>
-    <strong>7.2018</strong> <em>After Work</em>, <a href="https://lafazdelatierravideo.wordpress.com/" target="_blank">La Faz de la Tierra</a>, Espacio Pla, Buenos Aires, Argentina. <em>After Work</em>em> will be exhibited together with 35 other videos in a show that reboots Eduardo Pla’s video installation Videomundo Virtual. (note: Videomundo Virtual was an artistic production for the 50th anniversary of the UN in 1995, and featured a sphere-shaped structure with six TV sets.)
+    <strong>7.2018</strong> <a href="http://squeaky.org/squeaky-wheel-announces-summer-2018-workspace-residents/" target="_blank">Squeaky Wheel announces Summer 2018 Workspace Residents</a>, Squeaky Wheel Film &amp; Meida Art Center, Buffalo, NY. Artist Resident Emily Martinez will be working on <em>Eternal Boy Playground</em>.
+    <br/><br/>
+    <strong>7.2018</strong> <em>After Work</em>, <a href="https://lafazdelatierravideo.wordpress.com/" target="_blank">La Faz de la Tierra</a>, Espacio Pla, Buenos Aires, Argentina. <em>After Work</em> will be exhibited together with 35 other videos in a show that reboots Eduardo Pla’s video installation Videomundo Virtual. (note: Videomundo Virtual was an artistic production for the 50th anniversary of the UN in 1995, and featured a sphere-shaped structure with six TV sets.)
     <br/><br/>
     <strong>6.2018</strong> <em>anxioustomake.ga</em>, <a href="https://crit.hangar.org/toolbox/" target="_blank">Artistic Approaches to the Interface </a>, Hangar Centre for Art Research and Production. Our website is featured as part of the toolkit in Section 4: Artistic Approaches to the Interface
     <br/><br/>
@@ -683,7 +687,7 @@
     <br/><br/>
     <strong>9.2017</strong> <em>How to Make Yourself into a Commissioning Body in Five Easy Steps</em>, <a href="http://networkcultures.org/entreprecariat/pervasive-labour-union-zine-11/" target="_blank">Pervasive Labour Union zine #11 – Special Issue: Entreprecariat!</a>, Institute of Network Cultures, Amsterdam, NL  
     <br/><br/>
-     <strong>7.2017</strong> <em><a href="http://networkcultures.org/entreprecariat/mugtivism/" target="_blank">Notes on Mugtivism and Precarious Merchandising</a></em>, Entreprecariat, Institute of Network Cultures. article by by Silvio Lorusso featuring our mugs
+    <strong>7.2017</strong> <em><a href="http://networkcultures.org/entreprecariat/mugtivism/" target="_blank">Notes on Mugtivism and Precarious Merchandising</a></em>, Entreprecariat, Institute of Network Cultures. article by by Silvio Lorusso featuring our mugs
     <br/><br/>
     <strong>6.2017</strong> <em>Precarious Life 2.0</em>, <a href="http://theluminaryarts.com/exhibitions/anxious-to-make" target="_blank">The Luminary</a>, St. Louis, MO<br/>Solo Exhibition, June 24 - July 15th, 2017
     <br/><br/>
@@ -746,25 +750,29 @@
   <div id="news" class="mobile">
     <div class="center"><span class="mobile-title shake-slow shake-constant">News</span></div><br/>
     <small>
-    <strong>2.2019</strong> <em><a href="https://www.kqed.org/arts/13849586/crypto-bros-eternal-boy-playground-anxious-to-make" target="_blank">Crypto-Bros Beware: These Artists Aren’t Buying Your Version of Utopia</a></em> review of <em>Eternal Boy Playground</em> by Blythe Sheldon, KQED Arts
+    <strong>1.2019</strong> <em><a href="https://www.kqed.org/arts/13849586/crypto-bros-eternal-boy-playground-anxious-to-make" target="_blank">Crypto-Bros Beware: These Artists Aren’t Buying Your Version of Utopia</a></em> review of <em>Eternal Boy Playground</em> by Blythe Sheldon, KQED Arts
     <br/><br/>
-    <strong>2.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://currentsnewmedia.org/festivals/currents-new-media-2019/" target="_blank">Currents New Media Festival</a>, Santa Fe, New Mexico, June 7-23 2019
+    <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://currentsnewmedia.org/festivals/currents-new-media-2019/" target="_blank">Currents New Media Festival</a>, Santa Fe, New Mexico, June 7-23 2019
     <br/><br/>
-    <strong>2.2019</strong> <em>This Artwork is About the Sharing Economy</em>,  Who Does What?, <a href="http://drugo-more.hr/" target="_blank">Drugo More</a>, Rijeka, Croatia, February 14 - March 7 2019
+    <strong>1.2019</strong> <em>This Artwork is About the Sharing Economy</em>,  Who Does What?, <a href="http://drugo-more.hr/" target="_blank">Drugo More</a>, Rijeka, Croatia, February 14 - March 7 2019
     <br/><br/>
-    <strong>2.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, Self as Actor: Colonising Identity, <a href="http://www.neme.org/nac/" target="_blank">NeMe Arts Centre</a>, Limassol, Cyprus, February 15 - March 25 2019
+    <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, Self as Actor: Colonising Identity, <a href="http://www.neme.org/nac/" target="_blank">NeMe Arts Centre</a>, Limassol, Cyprus, February 15 - March 25 2019
     <br/><br/>
-    <strong>2.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://awmat2019.wordpress.com/" target="_blank">Alliance of Women in Media Arts and Technology</a>, University of California Santa Barbara, February 7-9 2019
+    <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://awmat2019.wordpress.com/" target="_blank">Alliance of Women in Media Arts and Technology</a>, University of California Santa Barbara, February 7-9 2019
     <br/><br/>
     <strong>1.2019</strong> <em>Making You</em>, Entanglements, <a href="http://herenvironment.com/" target="_blank">Her Environment</a>, <a href="http://theyardsgallery.com" target="_blank">Yards Gallery</a>, Chicago, IL, Jan 26 - Feb 15 2019
     <br/><br/>
     <strong>12.2018</strong> <em>Eternal Boy Playground</em>, <a href="https://tttelematiccc.com/" target="_blank">Telematic</a>, San Francisco, CA<br/>Solo Exhibition, Dec 15 2018 - February 2 2019
     <br/><br/>
+    <strong>11.2018</strong> Emergancy Grant to help fund <em>Eternal Boy Playground</em>, <a href="https://www.foundationforcontemporaryarts.org/recipients/2018emergencygrantsvisualarts" target="_blank">Foundation for Contemporary Arts</a> New York, NY
+    <br/><br/>
     <strong>11.2018</strong> <em>Making You</em>, <a href="https://northeastofnorth.com/event/artists-shorts-screening-programme/" target="_blank">Artists’ Shorts Screening Programme</a>, NEoN Digital Arts Festival, Dundee, Scotland
     <br/><br/>
     <strong>8.2018</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="http://artlitlab.org/events/off-the-wall-2018" target="_blank">Off the Wall</a>, Arts + Literature Laboratory, Madison, WI
     <br/><br/>
-    <strong>7.2018</strong> <em>After Work</em>, <a href="https://lafazdelatierravideo.wordpress.com/" target="_blank">La Faz de la Tierra</a>, Espacio Pla, Buenos Aires, Argentina. <em>After Work</em>em> will be exhibited together with 35 other videos in a show that reboots Eduardo Pla’s video installation Videomundo Virtual. (note: Videomundo Virtual was an artistic production for the 50th anniversary of the UN in 1995, and featured a sphere-shaped structure with six TV sets.)
+    <strong>7.2018</strong> <a href="http://squeaky.org/squeaky-wheel-announces-summer-2018-workspace-residents/" target="_blank">Squeaky Wheel announces Summer 2018 Workspace Residents</a>, Squeaky Wheel Film &amp; Meida Art Center, Buffalo, NY. Artist Resident Emily Martinez will be working on <em>Eternal Boy Playground</em>.
+    <br/><br/>
+    <strong>7.2018</strong> <em>After Work</em>, <a href="https://lafazdelatierravideo.wordpress.com/" target="_blank">La Faz de la Tierra</a>, Espacio Pla, Buenos Aires, Argentina. <em>After Work</em> will be exhibited together with 35 other videos in a show that reboots Eduardo Pla’s video installation Videomundo Virtual. (note: Videomundo Virtual was an artistic production for the 50th anniversary of the UN in 1995, and featured a sphere-shaped structure with six TV sets.)
     <br/><br/>
     <strong>6.2018</strong> <em>anxioustomake.ga</em>, <a href="https://crit.hangar.org/toolbox/" target="_blank">Artistic Approaches to the Interface </a>, Hangar Centre for Art Research and Production. Our website is featured as part of the toolkit in Section 4: Artistic Approaches to the Interface
     <br/><br/>
