--- a/makingyou.html
+++ b/makingyou.html
@@ -130,7 +130,7 @@
         <li>
           <a href="afterwork.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">After Work | Four Futures</span>
+            <span class="dnl-link-text">After Work</span>
           </a>
         </li>
         <li>
